--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>JEXCO - Github</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="http://jexco.php.xdomain.jp/style.css" />
+    <link rel="stylesheet" href="fonts.css" />
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
