--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JEXCO - Github</title>
+    <title>JEXCO - Github.io</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="fonts.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
-    <h1>Github</h1>
-    <p>Githubで作成しました。どうも！JEXCOです。<br><br>マイクラ高速やコードをにらめっこしたりする人です。</p>
+    <div class="container">
+        <div class="side" id="pc">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+            <img src='http://hpcgi2.hotweb.or.jp/counter/counter.cgi?link=https://jexco.github.io/&style=war2orc&width=5'>
+        </div>
+        <div class="main" id="pc">
+            <h1>Top</h1>
+            <p>Githubで作成したので<a href="http://jexco.php.xdomain.jp/?link=githubtrue">メインサイト</a>のと少し異なります。ご注意ください。</p>
+            <p>ようこそ！JEXCO.Github.ioへ</p>
+        </div>
+        <div id="sp">
+            <h1>Top</h1>
+            <p>Githubで作成したので<a href="http://jexco.php.xdomain.jp/?link=githubtrue">メインサイト</a>のと少し異なります。ご注意ください。</p>
+            <p>ようこそ！JEXCO.Github.ioへ</p>
+        </div>
+        </div>
+        <div id="sp" class="side-sp">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
   </body>
 </html>
