--- a/リンク/index.html
+++ b/リンク/index.html
@@ -1,1 +1,51 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>概要 - Github.io</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <div class="container">
+        <div class="side" id="pc">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+        <div class="main" id="pc">
+            <h1>リンク</h1>
+            <a href="//wikiwiki.jp/superhighway/HIXCO">HIXCOグループ - マイクラ高速道路ネットワーク Wiki*</a><br>
+            <a href="//wikiwiki.jp/superhighway/FIXCO">FIXCO - マイクラ高速道路ネットワーク Wiki*</a><br>
+            <a href="//wikiwiki.jp/elegant-exp/XIXCO">XENONグループXIXCO - マイ高速道路wiki Wiki*</a><br>
+            <a href="//wikiwiki.jp/xenon-exp/">XENON高速道路 Wiki*</a><br>
+            <a href="//wikiwiki.jp/elegant-exp/NewAxico">NewAxico - マイ高速道路wiki Wiki*</a><br>
+            <a href="//wikiwiki.jp/elegant-exp/荒らし獄滅委員会株式会社">ARXCO(荒らし獄滅委員会株式会社)</a><br>
+        </div>
+        <div id="sp">
+            <h1>リンク</h1>
+            <a href="//wikiwiki.jp/superhighway/HIXCO">HIXCOグループ - マイクラ高速道路ネットワーク Wiki*</a><br>
+            <a href="//wikiwiki.jp/superhighway/FIXCO">FIXCO - マイクラ高速道路ネットワーク Wiki*</a><br>
+            <a href="//wikiwiki.jp/elegant-exp/XIXCO">XENONグループXIXCO - マイ高速道路wiki Wiki*</a><br>
+            <a href="//wikiwiki.jp/xenon-exp/">XENON高速道路 Wiki*</a><br>
+            <a href="//wikiwiki.jp/elegant-exp/NewAxico">NewAxico - マイ高速道路wiki Wiki*</a><br>
+            <a href="//wikiwiki.jp/elegant-exp/荒らし獄滅委員会株式会社">ARXCO(荒らし獄滅委員会株式会社)</a><br>
+        </div>
+        </div>
+        <div id="sp" class="side-sp">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+  </body>
+</html>
