--- a/概要/index.html
+++ b/概要/index.html
@@ -1,1 +1,61 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>概要 - Github.io</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <div class="container">
+        <div class="side" id="pc">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+        <div class="main" id="pc">
+            <h1>概要</h1>
+            <p>JEXCO Highway Co.,Ltd.<br>
+            JEXCO高速道路株式会社<br>
+            FIXCO,HIXCO,XIXCOの3社の高速道路管理会社のもう１つ<br>
+            元々JEXCOはMRHCOという会社だった<br>
+            JEXCO本社から南下はまた別会社が管理しているわけわからない構成になっている<br>
+            MRHCO 2014年4月19日設立<br>
+            JEXCO 2020年12月27日設立<br>
+            2022年5月中旬頃にHIXCO、FIXCO、XIXCOと合流<br>
+            2022年6月26日 Wiki開設！！<br>
+            2023年2月 サイト設立！！<br>
+            2023年7月 なんかいろいろやっている(もちろんマ高やっていますよ？？)</p>
+        </div>
+        <div id="sp">
+            <h1>概要</h1>
+            <p>JEXCO Highway Co.,Ltd.<br>
+                JEXCO高速道路株式会社<br>
+                FIXCO,HIXCO,XIXCOの3社の高速道路管理会社のもう１つ<br>
+                元々JEXCOはMRHCOという会社だった<br>
+                JEXCO本社から南下はまた別会社が管理しているわけわからない構成になっている<br>
+                MRHCO 2014年4月19日設立<br>
+                JEXCO 2020年12月27日設立<br>
+                2022年5月中旬頃にHIXCO、FIXCO、XIXCOと合流<br>
+                2022年6月26日 Wiki開設！！<br>
+                2023年2月 サイト設立！！<br>
+                2023年7月 なんかいろいろやっている(もちろんマ高やっていますよ？？)</p>
+        </div>
+        </div>
+        <div id="sp" class="side-sp">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+  </body>
+</html>
