--- a/道路/index.html
+++ b/道路/index.html
@@ -1,1 +1,85 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>JEXCO - Github.io</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="/style.css" />
+    <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <div class="container">
+        <div class="side" id="pc">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+        <div class="main" id="pc">
+            <h1>道路一覧</h1>
+            <p>
+                <nav>
+                    <ul>
+                        <li>[E1]海元自動車道</li>
+                        <li>[E2]海元第２自動車道</li>
+                        <li>[E2A]海元連絡道</li>
+                        <li>[E3]草村道路</li>
+                        <li>[E4]三沢自動車道</li>
+                        <li>[E5]雪山自動車道</li>
+                        <li>[E6]雪縄自動車道</li>
+                        <li>[E13]海縄自動車道</li>
+                        <li>[E14]青山自動車道</li>
+                        <li>[E90]疋田バイパス</li>
+                        <li>[CX]海元環状道</li>
+                        <li>[A1]空港道</li>
+                        <li>[A2]海水湯沢道路</li>
+                        <li>[A3]藻泡道路</li>
+                        <li>[C1]都市環状線</li>
+                        <li>[S1]村前線</li>
+                        <li>[S2]窄頭線</li>
+                    </ul>
+                </nav>
+            </p>
+        </div>
+        <div id="sp">
+            <h1>道路一覧</h1>
+            <p>
+                <nav>
+                    <ul>
+                        <li>[E1]海元自動車道</li>
+                        <li>[E2]海元第２自動車道</li>
+                        <li>[E2A]海元連絡道</li>
+                        <li>[E3]草村道路</li>
+                        <li>[E4]三沢自動車道</li>
+                        <li>[E5]雪山自動車道</li>
+                        <li>[E6]雪縄自動車道</li>
+                        <li>[E13]海縄自動車道</li>
+                        <li>[E14]青山自動車道</li>
+                        <li>[E90]疋田バイパス</li>
+                        <li>[CX]海元環状道</li>
+                        <li>[A1]空港道</li>
+                        <li>[A2]海水湯沢道路</li>
+                        <li>[A3]藻泡道路</li>
+                        <li>[C1]都市環状線</li>
+                        <li>[S1]村前線</li>
+                        <li>[S2]窄頭線</li>
+                    </ul>
+                </nav>
+            </p>
+        </div>
+        </div>
+        <div id="sp" class="side-sp">
+            <img src="jexco.png" width="150">
+            <h3>概要</h3>
+            <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
+            <h3>MenuBar</h3>
+            <a href="/">Top</a><br>
+            <a href="/概要/">概要</a><br>
+            <a href="/道路/">道路一覧</a><br>
+            <a href="/リンク/">リンク</a><br>
+        </div>
+  </body>
+</html>
