--- a/概要/index.html
+++ b/概要/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
         <div class="side" id="pc">
-            <img src="jexco.png" width="150">
+            <img src="/jexco.png" width="150">
             <h3>概要</h3>
             <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
             <h3>MenuBar</h3>
@@ -48,7 +48,7 @@
         </div>
         </div>
         <div id="sp" class="side-sp">
-            <img src="jexco.png" width="150">
+            <img src="/jexco.png" width="150">
             <h3>概要</h3>
             <p>マイクラ高速とかを作ったり、コード(HTML,PHP,CSS,JS,Pyなど)を見たり書いたりしている人です。</p>
             <h3>MenuBar</h3>
