--- a/概要/index.html
+++ b/概要/index.html
@@ -22,7 +22,7 @@
             <h1>概要</h1>
             <p>JEXCO Highway Co.,Ltd.<br>
             JEXCO高速道路株式会社<br>
-            FIXCO,HIXCO,XIXCOの3社の高速道路管理会社のもう１つ<br>
+            最近はFIXCO,HIXCO,XIXCOの道路を参考にして作っているよ<br>
             元々JEXCOはMRHCOという会社だった<br>
             JEXCO本社から南下はまた別会社が管理しているわけわからない構成になっている<br>
             MRHCO 2014年4月19日設立<br>
