--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
         </div>
         <div class="main">
             <h1>404 Not Found</h1>
-          <p>指定されたURLのページは存在しません。<br><br>ページが移動されたか、削除されたか、URLを間違えた可能性があります。<br>現在のページ「<script>document.write("location.href");</script><noscript>取得できません</noscript>」</p>
+          <p>指定されたURLのページは存在しません。<br><br>ページが移動されたか、削除されたか、URLを間違えた可能性があります。<br>現在のページ「<script>document.write(location.href);</script><noscript>取得できません</noscript>」</p>
         </div>
         </div>
         <div id="sp" class="side-sp">
