--- a/リンク/index.html
+++ b/リンク/index.html
@@ -4,9 +4,26 @@
     <title>概要 - Github.io</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../loading.css" />
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
+    <div id="js-loader" class="loader">
+      <div class="sk-fading-circle">
+        <div class="sk-circle1 sk-circle"></div>
+        <div class="sk-circle2 sk-circle"></div>
+        <div class="sk-circle3 sk-circle"></div>
+        <div class="sk-circle4 sk-circle"></div>
+        <div class="sk-circle5 sk-circle"></div>
+        <div class="sk-circle6 sk-circle"></div>
+        <div class="sk-circle7 sk-circle"></div>
+        <div class="sk-circle8 sk-circle"></div>
+        <div class="sk-circle9 sk-circle"></div>
+        <div class="sk-circle10 sk-circle"></div>
+        <div class="sk-circle11 sk-circle"></div>
+        <div class="sk-circle12 sk-circle"></div>
+        </div>
+    </div>
     <div class="container">
         <div class="side" id="pc">
             <img src="/jexco.png" width="150">
@@ -47,5 +64,6 @@
             <a href="/道路/">道路一覧</a><br>
             <a href="/リンク/">リンク</a><br>
         </div>
+        <script src="./loading.js"></script>
   </body>
 </html>
