--- a/道路/index.html
+++ b/道路/index.html
@@ -98,6 +98,6 @@
             <a href="/道路/">道路一覧</a><br>
             <a href="/リンク/">リンク</a><br>
         </div>
-        <script src="./loading.js"></script>
+        <script src="../loading.js"></script>
   </body>
 </html>
